--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.5
+  json_annotation: ^4.8.0
+  intl: ^0.18.0
+  debouncer_widget: ^1.0.0
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +53,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
